css/tree.css
h1 {
	padding-top: 32px;
	padding-bottom: 32px;
	text-align: center;
	font-stretch: expanded;
	font-size:3vw;
}

.tree {
	padding-left: 0px;
	color: black;
	font-family: "Ubuntu", sans-serif;
}
.tree ul {
	padding-left: 100px;
	line-height: 100%;
	list-style-type: none;
	margin-left: 5px;
}

.tree li {
	border-left: 1px solid black;
}
.tree li:before {
	border-bottom: 2px solid black;
	position: relative;
	top: -0.8em;
	width: 12px;
	content: "";
	display: inline-block;
	left: -1px;
}

.leaf {
	width: 100px;
	font-size: 14px;
	font-weight: normal;
	padding: 4px 8px 4px 8px;
	border: 2px solid black;
	border-radius: 3px;
	background-color: #d3d3d3;
}

.leaf:hover .dropdown {
	display: block;
}

.dropdown {
	display:none;
	position: absolute;
	background-color: #f9f9f9;
	width: 400px;
	padding: 8px 16px 8px 16px;
	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
	text-align: left;
	font-weight: normal;
	line-height: 150%;
	z-index: 1;
}

.icon {
	font-size: 26px;
	position: absolute;
	top: 2px;
	right: 0px;
}

